css/style.css
html {
	height: 100%;
}

body {
	height: 100%;
	padding: 50px 1% 0 1%;
	background-image: url("../images/1.jpg");
}

nav, .navbar {
	height: 5%;
	margin-bottom: 0;
	color: #FFA500;
	background-color: #5C5C5C;
	border-bottom: 3px solid #FFA500;
}

h3 {
	margin: 0;
}

label {
	color: white;
}

#actionPanel {
	position: relative;
	height: 100%;
}

.map-container{
    position: relative;
    height: 100%;
    border: 1px solid #FFA500;
}
.map-container .map-canvas{
    position: absolute;
    height: 100%;
    top: 0;
    right: 0;
    bottom: 0;
    left: 0;
    margin: 0;
    padding: 0;
}

#actionRow {
	height: 100%;
	width: 100%;
	margin: 0;
}

#mapColumn {
	height: 100%;
	padding: 1% 0 1% 1%;
}

#infoPane {
	height: 100%;
	padding: 1% 0 1% 0;
}

#search {
	width: 100%
}

table {
	display: block;
	height: 100%;
	overflow: auto;
	width: 100%;
	margin-bottom: 0;
	border-collapse: collapse;
	padding: 1%;
}

thead, thead tr, thead tr td{
	display: block;
}

.info {
	border: 1px solid #FFA500;
}

table {
	background: rgb(255,255,255);
	background: rgba(255,255,255,0.5);
}

.wi {
	color: #FFA500;
}

